2013-04-22  Paul Eggert  <eggert@cs.ucla.edu>

	* make-dist: Do not distribute admin/unidata/Makefile.
	It is generated by 'configure'.

	* build-aux/update-subdirs: Don't leave subdirs.el~ behind.
	It messes up 'make distclean', and contains no useful information
	because it's a copy of subdirs.el.

2013-04-18  John Marino  <gnugcc@marino.st>  (tiny change)

	* configure.ac: Add DragonFly BSD, mostly same as FreeBSD.  (Bug#14068)

2013-04-18  Glenn Morris  <rgm@gnu.org>

	* configure.ac (AC_PROG_LN_S): Remove, too restrictive.
	(LN_S_FILEONLY): New output variable.
	* Makefile.in (LN_S): Remove.
	(LN_S_FILEONLY): New, set by configure.
	(install-arch-dep): Use LN_S_FILEONLY rather than LN_S.

2013-04-12  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (canonical): Adapt to 64-bit Cygwin, for which
	`canonical' is `x86_64-unknown-cygwin'.

2013-04-09  Ken Brown  <kbrown@cornell.edu>

	* configure.ac (W32_RES_LINK): Remove unneeded linker directive
	`-Wl,-bpe-i386', which is confusing in the 64-bit case.
	(Bug#12993)

2013-04-07  Paul Eggert  <eggert@cs.ucla.edu>

	Fix --enable-profiling bug introduced by 2013-02-25 change (Bug#13783).
	* configure.ac (LD_SWITCH_SYSTEM_TEMACS): Append -pg if profiling
	and if not on GNU/Linux or FreeBSD.
	* lib/Makefile.am (AM_CFLAGS): Add $(PROFILING_CFLAGS), so that
	lib/*.o is profiled too.

2013-03-30  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2013-03-29 stdalign: port to stricter ISO C11
	This helps to run 'configure' on MS-Windows; see Eli Zaretskii in
	<http://lists.gnu.org/archive/html/emacs-devel/2013-03/msg00999.html>.

2013-03-27  Paul Eggert  <eggert@cs.ucla.edu>

	* configure.ac (HAVE_XKBGETKEYBOARD): Remove.
	Subsumed by HAVE_XKB.  All uses changed.

2013-03-25  Jan Djärv  <jan.h.d@swipnet.se>

	* configure.ac (HAVE_XKB): Define if Xkb is present.

2013-03-24  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating: